# idempotent

./: CMakeLists.txt  README.md
src/: idempotent.cpp  idempotent.h
test/: CMakeLists.txt  main.cpp
